# AndroidSoundTouch

./: .travis.yml  README.md  app-release.apk  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/github/junyuecao/androidsoundeffect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/junyuecao/androidsoundeffect/: MainActivity.kt  VoiceRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/junyuecao/androidsoundeffect/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
soundtouch/: CMakeLists.txt  build.gradle
soundtouch/src/androidTest/java/io/github/junyuecao/soundtouch/: ExampleInstrumentedTest.java
soundtouch/src/main/: AndroidManifest.xml
soundtouch/src/main/cpp/: Android.mk  Application.mk  SoundTouchJNI.cpp  common.h
soundtouch/src/main/cpp/SoundTouch/: BPMDetect.cpp
soundtouch/src/main/cpp/SoundTouch/include/: STTypes.h
soundtouch/src/main/java/io/github/junyuecao/soundtouch/: SoundTouch.java
soundtouch/src/main/res/values/: strings.xml
soundtouch/src/test/java/io/github/junyuecao/soundtouch/: ExampleUnitTest.java
